syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package aspia.proto;

enum Status
{
    STATUS_UNKNOWN                      = 0;
    STATUS_SUCCESS                      = 1;
    STATUS_NO_CONSOLE_SESSION           = 2;
    STATUS_INVALID_USERNAME_OR_PASSWORD = 3;
    STATUS_SESSION_TYPE_NOT_ALLOWED     = 4;
    STATUS_AUTH_METHOD_NOT_SUPPORTED    = 5;
    STATUS_ACCESS_DENIED                = 6;
    STATUS_FILE_NOT_FOUND               = 7;
    STATUS_PATH_NOT_FOUND               = 8;
    STATUS_FILE_ALREADY_EXISTS          = 9;
    STATUS_NOT_ENOUGH_MEMORY            = 10;
}
